// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormMessage render correctly (error message) 1`] = `
<body>
  <div>
    <div
      class="ui error message"
    >
      Error Test Message!
    </div>
  </div>
</body>
`;

exports[`FormMessage render correctly (no message) 1`] = `
<body>
  <div />
</body>
`;

exports[`FormMessage render correctly (success message) 1`] = `
<body>
  <div>
    <div
      class="ui success message"
    >
      Success Test Message!
    </div>
  </div>
</body>
`;
